# flipbook

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
app/: __init__.py  crud.py  db.py  main.py
docs/: v2_questions.md
mcp/: server.py
sample_data/: demo_50.xlsx  kunder.xlsx
scripts/: doctor.bat  doctor.py  doctor.sh  gen_demo_data.py  install.bat  install.ps1  install.sh  register_mcp.py  repair.bat  repair.sh  start.bat  start.sh  start_silent.vbs
web/: index.html  manifest.json
