[project]
name = "tools-crm"
version = "0.1.0"
description = "Lightweight local CRM for a tools salesman. FastAPI + SQLite + MCP."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "mcp>=1.0",
]

[tool.uv]
package = false
